trunk/src/objects/TestCloudConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Login_URL__c</fullName>
        <label>SFDC Login URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sauce_Access_Key__c</fullName>
        <label>Sauce Access Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sauce_Username__c</fullName>
        <label>Sauce Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selenium_Proxy_Port__c</fullName>
        <label>Selenium Proxy Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selenium_Proxy_URL__c</fullName>
        <label>Selenium Proxy URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Test Cloud Config</label>
</CustomObject>